Рефакторинг MVP на MVVM

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.hfad.playlistmaker'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.hfad.playlistmaker"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -40,6 +40,7 @@ dependencies {
     implementation "com.github.moxy-community:moxy-android:$moxyVersion"
     kapt "com.github.moxy-community:moxy-compiler:$moxyVersion"
 
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
